--- a/k8-demo2/service.yaml
+++ b/k8-demo2/service.yaml
@@ -5,7 +5,7 @@ metadata:
 spec:
   type: NodePort
   selector:
-    app.kubernetes.io/name: sample-nginx-app
+    app: sample-nginx-app
   ports:
     - port: 80
       # By default and for convenience, the `targetPort` is set to
