--- a/k8-demo2/service.yaml
+++ b/k8-demo2/service.yaml
@@ -7,11 +7,12 @@ spec:
   selector:
     app: sample-nginx-app
   ports:
-    - port: 80
+    - port: 8080 # This is the port for service which means if I want to access my service I can use service IP 
+                 # and the port of 8080 and I can access the deployed container
       # By default and for convenience, the `targetPort` is set to
-      # the same value as the `port` field.
-      targetPort: 80
+      # the same value as the `port` field. This is service port which can be accessed from Localip:8080.
+      targetPort: 80 # Pod port.
       # Optional field
       # By default and for convenience, the Kubernetes control plane
       # will allocate a port from a range (default: 30000-32767)
-      nodePort: 30007
+      nodePort: 30007 # Deployment can be accessed on any device which can access Servers on port 30007.
