--- a/k8-demo2/ingress.yaml
+++ b/k8-demo2/ingress.yaml
@@ -15,21 +15,44 @@
 #            port:
 #              number: 80
 
+###########################################################################
+
+#apiVersion: networking.k8s.io/v1
+#kind: Ingress
+#metadata:
+#  name: ingress-example
+#  annotations:
+#    kubernetes.io/ingress.class: "nginx"  # Specify the Ingress class here
+#spec:
+#  rules:
+#  - host: first.bar.com
+#    http:
+#      paths:
+#      - pathType: Prefix
+#        path: "/"
+#        backend:
+#          service:
+#            name: nginx-service
+#            port:
+#              number: 80
+
+############################################################################
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: ingress-example
   annotations:
-    kubernetes.io/ingress.class: "nginx"  # Specify the Ingress class here
+    nginx.ingress.kubernetes.io/rewrite-target: /
 spec:
+  ingressClassName: nginx-example  # Specify the desired Ingress class
   rules:
-  - host: first.bar.com
-    http:
-      paths:
-      - pathType: Prefix
-        path: "/"
-        backend:
-          service:
-            name: nginx-service
-            port:
-              number: 80
+    - http:
+        paths:
+          - path: /
+            pathType: Prefix
+            backend:
+              service:
+                name: test
+                port:
+                  number: 80
+
